# neuralnet

./: .gitignore  LICENSE  PRODUCTION_TRANSFORMER.md  README.md  generate.py  index.html  install.rage  ipfs_fetch.py  ipfs_fetch_cli.py  llm_router.py  optimized_transformer.py  production_transformer.py  production_transformer_rage.py  production_transformer_v1.0.0.py  production_transformer_v1.py  pyproject.toml  rag_inference.py  rage_dataloader.py  server.js  simplemind_jax.py  simplemind_torch.py  style.css
docs/: DOC.md  EXPLANATION.md  EXPLANATION_ProductionTransformer_v1.0.0.md  PROMOTE_MODELPACK.md  SIMPLEMIND_IN_RAGE.md  TECHNICAL.md  neuralnet_as_a_service.md
neuralnet/: __init__.py  dataloader.py  inference.py  modelpack.py  router.py  simplemind.py  transformer.py
tests/: test_integration.py  test_server_js.py  test_smoke.py
