# SPDX-License-Identifier: Apache-2.0
# (c) 2024-2026 GATERAGE — neuralnet (RAGE + ProductionTransformer)
#
# ⚠️  PROTOTYPE — version 0.1.0a4 (PEP-440 alpha)
# Interfaces will change. Pin the exact commit if you depend on it.
# Companion repos (RAGE / aglm / mastermind) are at 0.1.0+; this one
# is intentionally behind until the API stabilizes.
#
# v0.1.0a4: removed the two deprecated meta-files (optimized_transformer.py,
#   ipfs_fetch.py); the canonical extractions have been in place at
#   neuralnet.transformer_rage / neuralnet.modelpack for two alpha cycles.
#   Added importorskip-gated integration tests covering ProductionTransformer
#   forward, RAGE-flavored forward, SimpleMind reranker, LLMRouter
#   construction, dataloader chunking, modelpack init-template CLI.
# v0.1.0a3: reorganized flat scripts into a `neuralnet/` Python package.
#   Top-level files retained as deprecation shims (DeprecationWarning at
#   import; removal scheduled for 0.2.0).
# v0.1.0a2: meta-files extracted into real importable modules
#   (production_transformer_rage.py + ipfs_fetch_cli.py); renamed
#   production_transformer_v1.0.0.py → production_transformer_v1.py;
#   fixed generate.py dotted import.
# v0.1.0a1: pyproject + service spec + tests + typo fixes.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralnet"
version = "0.1.0a4"
description = "PROTOTYPE — RAGE training + serving with a mini ProductionTransformer, FAISS retrieval, pluggable LLM router, IPFS ModelPack distribution, and a Node.js UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "GATERAGE / Professor Codephreak" },
]
keywords = [
    "rage", "transformer", "neuralnet", "rag", "retrieval-augmented",
    "modelpack", "ipfs", "prototype", "agentic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core deps are intentionally minimal so the scripts can be inspected
# without installing the full ML stack. Use [torch] / [rage] / [all]
# extras to pull in the heavy pieces.
dependencies = []

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "numpy>=1.24",
]
rage = [
    "rage>=0.2.0",            # github.com/GATERAGE/RAGE — retrieval substrate
    "sentence-transformers>=2.6",
    "faiss-cpu>=1.7",
]
data = [
    "PyPDF2>=3.0",
    "python-docx>=1.0",
    "requests>=2.31",
]
serve = [
    "openai>=1.0",
    "requests>=2.31",
]
ipfs = [
    "requests>=2.31",
]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "optax>=0.1",
]
all = [
    "neuralnet[torch]",
    "neuralnet[rage]",
    "neuralnet[data]",
    "neuralnet[serve]",
    "neuralnet[ipfs]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/GATERAGE/neuralnet"
Documentation = "https://rage.pythai.net"
Repository = "https://github.com/GATERAGE/neuralnet"
"Companion: RAGE" = "https://github.com/GATERAGE/RAGE"
"Companion: aGLM" = "https://github.com/GATERAGE/aglm"
"Companion: mastermind" = "https://github.com/GATERAGE/mastermind"
"mindX consumer" = "https://github.com/agenticplace"
"Status" = "https://github.com/GATERAGE/neuralnet/blob/main/docs/neuralnet_as_a_service.md"

# v0.1.0a3 reorganized: the canonical code lives in the `neuralnet/`
# Python package. Old top-level files (production_transformer.py,
# llm_router.py, etc.) are now deprecation shims that re-export from
# neuralnet.* and emit a DeprecationWarning at import. They will be
# removed in 0.2.0.
#
# Two deprecated meta-files (optimized_transformer.py, ipfs_fetch.py)
# are also kept at the root with prepended `# DEPRECATED — META-FILE`
# headers; the extracted content lives at neuralnet.transformer_rage and
# neuralnet.modelpack.
[tool.setuptools.packages.find]
include = ["neuralnet*"]
exclude = ["tests*", "examples*", "docs*"]

# Top-level deprecation shims (one-line re-exports). Kept on py-modules
# so they install alongside the package and the DeprecationWarning fires.
[tool.setuptools]
py-modules = [
    "production_transformer",
    "production_transformer_v1",
    "production_transformer_rage",
    "llm_router",
    "rag_inference",
    "rage_dataloader",
    "simplemind_torch",
    "ipfs_fetch_cli",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
