# SPDX-License-Identifier: Apache-2.0
# (c) 2024-2026 GATERAGE — neuralnet (RAGE + ProductionTransformer)
#
# ⚠️  PROTOTYPE — version 0.1.0a6 (PEP-440 alpha)
# Interfaces will change. Pin the exact commit if you depend on it.
# Companion repos (RAGE / aglm / mastermind) are at 0.1.0+; this one
# is intentionally behind until the API stabilizes.
#
# v0.1.0a6: LICENSE normalized to full Apache-2.0 text (was a 1058b
#   custom MIT file); fixed `server.js` to invoke `python -m neuralnet.inference`
#   with `cwd: __dirname` (was spawning the removed `rag_inference.py` from
#   wherever the server was launched); README rewritten to reflect the
#   0.1.0a5 layout (3 root-level scripts + neuralnet/ package).
# v0.1.0a5: removed the 8 top-level deprecation shims (production_transformer.py,
#   production_transformer_v1.py, production_transformer_rage.py, llm_router.py,
#   rag_inference.py, rage_dataloader.py, simplemind_torch.py, ipfs_fetch_cli.py).
#   They shipped with DeprecationWarning in v0.1.0a3 — two alpha cycles is enough.
#   Consumers now import directly from `neuralnet.*`. The repo root holds only
#   `generate.py`, `train.py`, `simplemind_jax.py` plus `server.js`+`index.html`.
# v0.1.0a4: removed the two deprecated meta-files (optimized_transformer.py,
#   ipfs_fetch.py); added importorskip-gated integration tests.
# v0.1.0a3: reorganized flat scripts into a `neuralnet/` Python package.
#   Top-level files retained as deprecation shims (DeprecationWarning at
#   import; now removed in 0.1.0a5).
# v0.1.0a2: meta-files extracted into real importable modules
#   (production_transformer_rage.py + ipfs_fetch_cli.py); renamed
#   production_transformer_v1.0.0.py → production_transformer_v1.py;
#   fixed generate.py dotted import.
# v0.1.0a1: pyproject + service spec + tests + typo fixes.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralnet"
version = "0.1.0a6"
description = "PROTOTYPE — RAGE training + serving with a mini ProductionTransformer, FAISS retrieval, pluggable LLM router, IPFS ModelPack distribution, and a Node.js UI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "GATERAGE / Professor Codephreak" },
]
keywords = [
    "rage", "transformer", "neuralnet", "rag", "retrieval-augmented",
    "modelpack", "ipfs", "prototype", "agentic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core deps are intentionally minimal so the scripts can be inspected
# without installing the full ML stack. Use [torch] / [rage] / [all]
# extras to pull in the heavy pieces.
dependencies = []

[project.optional-dependencies]
torch = [
    "torch>=2.0",
    "numpy>=1.24",
]
rage = [
    "rage>=0.2.0",            # github.com/GATERAGE/RAGE — retrieval substrate
    "sentence-transformers>=2.6",
    "faiss-cpu>=1.7",
]
data = [
    "PyPDF2>=3.0",
    "python-docx>=1.0",
    "requests>=2.31",
]
serve = [
    "openai>=1.0",
    "requests>=2.31",
]
ipfs = [
    "requests>=2.31",
]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "optax>=0.1",
]
all = [
    "neuralnet[torch]",
    "neuralnet[rage]",
    "neuralnet[data]",
    "neuralnet[serve]",
    "neuralnet[ipfs]",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/GATERAGE/neuralnet"
Documentation = "https://rage.pythai.net"
Repository = "https://github.com/GATERAGE/neuralnet"
"Companion: RAGE" = "https://github.com/GATERAGE/RAGE"
"Companion: aGLM" = "https://github.com/GATERAGE/aglm"
"Companion: mastermind" = "https://github.com/GATERAGE/mastermind"
"mindX consumer" = "https://github.com/agenticplace"
"Status" = "https://github.com/GATERAGE/neuralnet/blob/main/docs/neuralnet_as_a_service.md"

# The canonical code lives in the `neuralnet/` Python package. As of
# v0.1.0a5 the top-level deprecation shims (production_transformer.py,
# llm_router.py, etc.) have been removed — consumers import directly
# from `neuralnet.*` now. The two deprecated meta-files
# (optimized_transformer.py, ipfs_fetch.py) were removed in v0.1.0a4.
[tool.setuptools.packages.find]
include = ["neuralnet*"]
exclude = ["tests*", "examples*", "docs*"]

# Removed in v0.1.0a5. Kept here as a comment for changelog clarity.
# [tool.setuptools]
# py-modules = [
#     "production_transformer",
#     "production_transformer_v1",
#     "production_transformer_rage",
#     "llm_router",
#     "rag_inference",
#     "rage_dataloader",
#     "simplemind_torch",
#     "ipfs_fetch_cli",
# ]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
